style.css
body{
    background-color: linen;
}

@font-face{
    font-family: Title Font;
    src: url("/bakery.ttf");
}

@font-face{
    font-family: Paragraph Font;
    src: url("/dosis.ttf");
}

h1{
    display: block;

    font-family: Title Font;
    color:rgb(235, 175, 107);

    font-size: 500px;

    height:450;

    text-align: center;
}


h2{
    display: block;

    font-family: Title Font;
    color:rgb(235, 175, 107);

    font-size: 500px;

    height:10;

    text-align: center;
}

p{
    display: block;
    font-size: 40px;
    text-align: center;
    font-family: Paragraph Font;
}

